--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <a href="login.html"><button class="login">Login</button></a>
 
-        <i class="fa-solid fa-bars" style="color: p"></i>
+        <i class="fa-solid fa-bars" style="color: purple"></i>
       </div>
 
       <div class="search-bar">
